--- a/environment.yml
+++ b/environment.yml
@@ -15,7 +15,6 @@ dependencies:
   - setuptools=78.1.1=py311hecd8cb5_0
   - sqlite=3.50.2=hc8b0dd6_1
   - tk=8.6.14=h0a12a5f_1
-  - tzdata=2025b=h04d1e81_0
   - wheel=0.45.1=py311hecd8cb5_0
   - xz=5.6.4=h46256e1_1
   - zlib=1.2.13=h4b97444_1
@@ -31,6 +30,7 @@ dependencies:
       - auth0-python==4.10.0
       - backoff==2.2.1
       - bcrypt==4.3.0
+      - beautifulsoup4==4.13.4
       - blinker==1.9.0
       - build==1.2.2.post1
       - cachetools==5.5.2
@@ -42,6 +42,7 @@ dependencies:
       - coloredlogs==15.0.1
       - crewai==0.121.1
       - cryptography==45.0.5
+      - curl-cffi==0.12.0
       - decorator==5.2.1
       - diskcache==5.6.3
       - distro==1.9.0
@@ -51,6 +52,7 @@ dependencies:
       - executing==2.2.0
       - filelock==3.18.0
       - flatbuffers==25.2.10
+      - frozendict==2.4.6
       - frozenlist==1.7.0
       - fsspec==2025.7.0
       - google-auth==2.40.3
@@ -87,6 +89,7 @@ dependencies:
       - mmh3==5.1.0
       - mpmath==1.3.0
       - multidict==6.6.3
+      - multitasking==0.0.12
       - networkx==3.5
       - numpy==2.3.2
       - oauthlib==3.3.1
@@ -103,11 +106,14 @@ dependencies:
       - orjson==3.11.0
       - overrides==7.7.0
       - packaging==25.0
+      - pandas==2.3.1
       - parso==0.8.4
       - pdfminer-six==20250506
       - pdfplumber==0.11.7
+      - peewee==3.18.2
       - pexpect==4.9.0
       - pillow==11.3.0
+      - platformdirs==4.3.8
       - posthog==5.4.0
       - prompt-toolkit==3.0.51
       - propcache==0.3.2
@@ -127,6 +133,7 @@ dependencies:
       - pyproject-hooks==1.2.0
       - python-dateutil==2.9.0.post0
       - python-dotenv==1.1.1
+      - pytz==2025.2
       - pyvis==0.3.2
       - pyyaml==6.0.2
       - referencing==0.36.2
@@ -139,6 +146,7 @@ dependencies:
       - shellingham==1.5.4
       - six==1.17.0
       - sniffio==1.3.1
+      - soupsieve==2.7
       - stack-data==0.6.3
       - sympy==1.14.0
       - tenacity==9.1.2
@@ -151,6 +159,7 @@ dependencies:
       - typer==0.16.0
       - typing-extensions==4.14.1
       - typing-inspection==0.4.1
+      - tzdata==2025.2
       - urllib3==2.5.0
       - uv==0.8.3
       - uvicorn==0.35.0
@@ -160,5 +169,6 @@ dependencies:
       - websocket-client==1.8.0
       - websockets==15.0.1
       - yarl==1.20.1
+      - yfinance==0.2.65
       - zipp==3.23.0
 prefix: /opt/miniconda3/envs/project-2
