getting segfault on pandas. need to resolve

--- a/environment.yml
+++ b/environment.yml
@@ -2,18 +2,33 @@ name: project-2
 channels:
   - defaults
 dependencies:
+  - blas=1.0=openblas
+  - bottleneck=1.4.2=py311h9b7fc35_0
   - bzip2=1.0.8=h6c40b1e_6
-  - ca-certificates=2025.2.25=hecd8cb5_0
+  - ca-certificates=2025.7.15=hecd8cb5_0
   - expat=2.7.1=h6d0c2b6_0
   - libcxx=17.0.6=hf547dac_4
   - libffi=3.4.4=hecd8cb5_1
+  - libgfortran=5.0.0=11_3_0_hecd8cb5_28
+  - libgfortran5=11.3.0=h9dfd629_28
+  - libopenblas=0.3.29=h3f8574a_0
+  - llvm-openmp=17.0.6=hdd4a2e0_0
   - ncurses=6.4=hcec6c5f_0
+  - numexpr=2.11.0=py311h20bc273_0
+  - numpy=1.26.4=py311h91b6869_0
+  - numpy-base=1.26.4=py311hb3ec012_0
   - openssl=3.0.17=hee2dfae_0
+  - pandas=2.2.3=py311h6d0c2b6_0
   - python=3.11.13=hbff2529_0
+  - python-dateutil=2.9.0post0=py311hecd8cb5_2
+  - python-tzdata=2025.2=pyhd3eb1b0_0
+  - pytz=2025.2=py311hecd8cb5_0
   - readline=8.2=hca72f7f_0
   - setuptools=78.1.1=py311hecd8cb5_0
+  - six=1.17.0=py311hecd8cb5_0
   - sqlite=3.50.2=hc8b0dd6_1
   - tk=8.6.14=h0a12a5f_1
+  - tzdata=2025b=h04d1e81_0
   - wheel=0.45.1=py311hecd8cb5_0
   - xz=5.6.4=h46256e1_1
   - zlib=1.2.13=h4b97444_1
@@ -43,7 +58,7 @@ dependencies:
       - click==8.2.1
       - cohere==5.16.2
       - coloredlogs==15.0.1
-      - crewai==0.121.1
+      - crewai==0.121.0
       - crewai-tools==0.45.0
       - cryptography==45.0.5
       - curl-cffi==0.12.0
@@ -124,7 +139,6 @@ dependencies:
       - mypy-extensions==1.1.0
       - networkx==3.5
       - nodeenv==1.9.1
-      - numpy==2.3.2
       - oauthlib==3.3.1
       - onnxruntime==1.19.2
       - openai==1.75.0
@@ -143,7 +157,6 @@ dependencies:
       - orjson==3.11.0
       - overrides==7.7.0
       - packaging==25.0
-      - pandas==2.3.1
       - parso==0.8.4
       - pdfminer-six==20250506
       - pdfplumber==0.11.7
@@ -175,10 +188,8 @@ dependencies:
       - pyproject-hooks==1.2.0
       - pyright==1.1.403
       - pysbd==0.3.4
-      - python-dateutil==2.9.0.post0
       - python-dotenv==1.1.1
       - pytube==15.0.0
-      - pytz==2025.2
       - pyvis==0.3.2
       - pyyaml==6.0.2
       - qdrant-client==1.15.1
@@ -192,7 +203,6 @@ dependencies:
       - rsa==4.9.1
       - schema==0.7.7
       - shellingham==1.5.4
-      - six==1.17.0
       - sniffio==1.3.1
       - soupsieve==2.7
       - sqlalchemy==2.0.42
@@ -212,7 +222,6 @@ dependencies:
       - typing-extensions==4.14.1
       - typing-inspect==0.9.0
       - typing-inspection==0.4.1
-      - tzdata==2025.2
       - urllib3==2.5.0
       - uv==0.8.3
       - uvicorn==0.35.0
@@ -223,7 +232,6 @@ dependencies:
       - websockets==15.0.1
       - wrapt==1.17.2
       - yarl==1.20.1
-      - yfinance==0.2.65
       - zipp==3.23.0
       - zstandard==0.23.0
 prefix: /opt/miniconda3/envs/project-2
