--- a/environment.yml
+++ b/environment.yml
@@ -1,67 +1,110 @@
-name: project-2
+name: test
 channels:
   - defaults
 dependencies:
-  - blas=1.0=openblas
+  - arrow-cpp=19.0.0=hb704434_4
+  - aws-c-auth=0.9.0=h46256e1_1
+  - aws-c-cal=0.9.2=h46256e1_0
+  - aws-c-common=0.12.3=h46256e1_0
+  - aws-c-compression=0.3.1=h46256e1_1
+  - aws-c-event-stream=0.5.5=h46256e1_0
+  - aws-c-http=0.10.2=h46256e1_0
+  - aws-c-io=0.20.1=h46256e1_0
+  - aws-c-mqtt=0.13.2=he61ece7_0
+  - aws-c-s3=0.8.3=h46256e1_0
+  - aws-c-sdkutils=0.2.4=h46256e1_0
+  - aws-checksums=0.2.7=h46256e1_0
+  - aws-crt-cpp=0.32.10=h6d0c2b6_0
+  - aws-sdk-cpp=1.11.528=he026a02_1
+  - blas=1.0=mkl
+  - boost-cpp=1.82.0=ha357a0b_2
   - bottleneck=1.4.2=py311h9b7fc35_0
   - bzip2=1.0.8=h6c40b1e_6
+  - c-ares=1.19.1=h6c40b1e_0
   - ca-certificates=2025.7.15=hecd8cb5_0
   - expat=2.7.1=h6d0c2b6_0
-  - libcxx=17.0.6=hf547dac_4
+  - gflags=2.2.2=hcec6c5f_1
+  - glog=0.5.0=hcec6c5f_1
+  - icu=73.1=hcec6c5f_0
+  - intel-openmp=2023.1.0=ha357a0b_43548
+  - libabseil=20250127.0=cxx17_h548131f_0
+  - libboost=1.82.0=hf53b9f2_2
+  - libbrotlicommon=1.0.9=h46256e1_9
+  - libbrotlidec=1.0.9=h46256e1_9
+  - libbrotlienc=1.0.9=h46256e1_9
+  - libcurl=8.14.1=h1448931_1
+  - libcxx=19.1.7=haebbb44_3
+  - libev=4.33=h9ed2024_1
+  - libevent=2.1.12=h04015c4_1
   - libffi=3.4.4=hecd8cb5_1
-  - libgfortran=5.0.0=11_3_0_hecd8cb5_28
-  - libgfortran5=11.3.0=h9dfd629_28
-  - libopenblas=0.3.29=h3f8574a_0
-  - llvm-openmp=17.0.6=hdd4a2e0_0
-  - ncurses=6.4=hcec6c5f_0
-  - numexpr=2.11.0=py311h20bc273_0
-  - numpy=1.26.4=py311h91b6869_0
-  - numpy-base=1.26.4=py311hb3ec012_0
+  - libgrpc=1.71.0=hf2926fd_0
+  - libiconv=1.16=h6c40b1e_3
+  - libnghttp2=1.57.0=h9beae6a_0
+  - libprotobuf=5.29.3=h66a43dd_1
+  - libre2-11=2024.07.02=hab2016f_0
+  - libssh2=1.11.1=h3a17b82_0
+  - libthrift=0.15.0=h70b4b81_2
+  - lz4-c=1.9.4=hcec6c5f_1
+  - mkl=2023.1.0=h8e150cf_43560
+  - mkl-service=2.4.0=py311h46256e1_2
+  - mkl_fft=1.3.8=py311h6c40b1e_0
+  - mkl_random=1.2.4=py311ha357a0b_0
+  - ncurses=6.5=h923df54_0
+  - numexpr=2.8.7=py311h728a8a3_0
+  - numpy=1.26.4=py311h728a8a3_0
+  - numpy-base=1.26.4=py311h53bf9ac_0
   - openssl=3.0.17=hee2dfae_0
+  - orc=2.1.1=h4dda5a6_0
   - pandas=2.2.3=py311h6d0c2b6_0
+  - pip=25.2=pyhc872135_0
+  - pyarrow=19.0.0=py311h6d0c2b6_1
   - python=3.11.13=hbff2529_0
   - python-dateutil=2.9.0post0=py311hecd8cb5_2
   - python-tzdata=2025.2=pyhd3eb1b0_0
   - pytz=2025.2=py311hecd8cb5_0
-  - readline=8.2=hca72f7f_0
+  - re2=2024.07.02=h1962661_0
+  - readline=8.3=h49f2429_0
   - setuptools=78.1.1=py311hecd8cb5_0
   - six=1.17.0=py311hecd8cb5_0
+  - snappy=1.2.1=h6d0c2b6_0
   - sqlite=3.50.2=hc8b0dd6_1
-  - tk=8.6.14=h0a12a5f_1
+  - tbb=2021.8.0=ha357a0b_0
+  - tk=8.6.15=h3a5a201_0
   - tzdata=2025b=h04d1e81_0
+  - utf8proc=2.6.1=h6c40b1e_1
   - wheel=0.45.1=py311hecd8cb5_0
   - xz=5.6.4=h46256e1_1
   - zlib=1.2.13=h4b97444_1
+  - zstd=1.5.6=h138b38a_0
   - pip:
       - aiohappyeyeballs==2.6.1
-      - aiohttp==3.12.14
+      - aiohttp==3.12.15
       - aiosignal==1.4.0
-      - alembic==1.16.4
+      - alembic==1.16.5
       - annotated-types==0.7.0
-      - anyio==4.9.0
+      - anyio==4.10.0
       - appdirs==1.4.4
       - asgiref==3.9.1
       - asttokens==3.0.0
       - attrs==25.3.0
-      - auth0-python==4.10.0
+      - auth0-python==4.13.0
       - backoff==2.2.1
       - bcrypt==4.3.0
-      - beautifulsoup4==4.13.4
+      - beautifulsoup4==4.13.5
       - blinker==1.9.0
-      - build==1.2.2.post1
+      - build==1.3.0
       - cachetools==5.5.2
-      - certifi==2025.7.14
-      - cffi==1.17.1
-      - charset-normalizer==3.4.2
+      - certifi==2025.8.3
+      - cffi==2.0.0
+      - charset-normalizer==3.4.3
       - chroma-hnswlib==0.7.6
       - chromadb==0.5.23
-      - click==8.2.1
-      - cohere==5.16.2
+      - click==8.3.0
+      - cohere==5.18.0
       - coloredlogs==15.0.1
-      - crewai==0.121.0
+      - crewai==0.121.1
       - crewai-tools==0.45.0
-      - cryptography==45.0.5
-      - curl-cffi==0.12.0
+      - cryptography==46.0.1
       - dataclasses-json==0.6.7
       - decorator==5.2.1
       - deprecation==2.1.0
@@ -72,70 +115,70 @@ dependencies:
       - durationpy==0.10
       - embedchain==0.1.128
       - et-xmlfile==2.0.0
-      - executing==2.2.0
-      - fastapi==0.116.1
+      - executing==2.2.1
+      - fastapi==0.116.2
       - fastavro==1.12.0
-      - filelock==3.18.0
+      - filelock==3.19.1
       - flatbuffers==25.2.10
-      - frozendict==2.4.6
       - frozenlist==1.7.0
-      - fsspec==2025.7.0
+      - fsspec==2025.9.0
       - google-auth==2.40.3
       - googleapis-common-protos==1.70.0
       - gptcache==0.1.44
       - greenlet==3.2.4
-      - grpcio==1.74.0
+      - grpcio==1.75.0
       - h11==0.16.0
-      - h2==4.2.0
-      - hf-xet==1.1.5
+      - h2==4.3.0
+      - hf-xet==1.1.10
       - hpack==4.1.0
       - httpcore==1.0.9
       - httptools==0.6.4
       - httpx==0.28.1
       - httpx-sse==0.4.0
-      - huggingface-hub==0.33.5
+      - huggingface-hub==0.35.0
       - humanfriendly==10.0
       - hyperframe==6.1.0
       - idna==3.10
       - importlib-metadata==8.7.0
       - importlib-resources==6.5.2
-      - instructor==1.10.0
-      - ipython==9.4.0
+      - instructor==1.11.3
+      - ipython==9.5.0
       - ipython-pygments-lexers==1.1.1
       - jedi==0.19.2
       - jinja2==3.1.6
       - jiter==0.10.0
-      - json-repair==0.47.8
-      - json5==0.12.0
+      - json-repair==0.50.1
+      - json5==0.12.1
       - jsonpatch==1.33
       - jsonpickle==4.1.1
       - jsonpointer==3.0.0
       - jsonref==1.1.0
-      - jsonschema==4.25.0
-      - jsonschema-specifications==2025.4.1
+      - jsonschema==4.25.1
+      - jsonschema-specifications==2025.9.1
       - kubernetes==33.1.0
-      - lancedb==0.24.2
+      - lance-namespace==0.0.6
+      - lance-namespace-urllib3-client==0.0.14
+      - lancedb==0.25.0
       - langchain==0.3.27
       - langchain-cohere==0.3.5
-      - langchain-community==0.3.27
-      - langchain-core==0.3.74
+      - langchain-community==0.3.29
+      - langchain-core==0.3.76
       - langchain-experimental==0.3.4
       - langchain-openai==0.2.14
-      - langchain-text-splitters==0.3.9
+      - langchain-text-splitters==0.3.11
       - langsmith==0.3.45
       - litellm==1.68.0
       - mako==1.3.10
-      - markdown-it-py==3.0.0
+      - markdown-it-py==4.0.0
       - markupsafe==3.0.2
       - marshmallow==3.26.1
       - matplotlib-inline==0.1.7
       - mdurl==0.1.2
-      - mem0ai==0.1.115
-      - mmh3==5.1.0
+      - mem0ai==0.1.116
+      - mmh3==5.2.0
       - monotonic==1.6
       - mpmath==1.3.0
-      - multidict==6.6.3
-      - multitasking==0.0.12
+      - multidict==6.6.4
       - mypy-extensions==1.1.0
       - networkx==3.5
       - nodeenv==1.9.1
@@ -143,50 +186,47 @@ dependencies:
       - onnxruntime==1.19.2
       - openai==1.75.0
       - openpyxl==3.1.5
-      - opentelemetry-api==1.35.0
-      - opentelemetry-exporter-otlp-proto-common==1.35.0
-      - opentelemetry-exporter-otlp-proto-grpc==1.35.0
-      - opentelemetry-exporter-otlp-proto-http==1.35.0
-      - opentelemetry-instrumentation==0.56b0
-      - opentelemetry-instrumentation-asgi==0.56b0
-      - opentelemetry-instrumentation-fastapi==0.56b0
-      - opentelemetry-proto==1.35.0
-      - opentelemetry-sdk==1.35.0
-      - opentelemetry-semantic-conventions==0.56b0
-      - opentelemetry-util-http==0.56b0
-      - orjson==3.11.0
+      - opentelemetry-api==1.37.0
+      - opentelemetry-exporter-otlp-proto-common==1.37.0
+      - opentelemetry-exporter-otlp-proto-grpc==1.37.0
+      - opentelemetry-exporter-otlp-proto-http==1.37.0
+      - opentelemetry-instrumentation==0.58b0
+      - opentelemetry-instrumentation-asgi==0.58b0
+      - opentelemetry-instrumentation-fastapi==0.58b0
+      - opentelemetry-proto==1.37.0
+      - opentelemetry-sdk==1.37.0
+      - opentelemetry-semantic-conventions==0.58b0
+      - opentelemetry-util-http==0.58b0
+      - orjson==3.11.3
       - overrides==7.7.0
       - packaging==25.0
-      - parso==0.8.4
+      - parso==0.8.5
       - pdfminer-six==20250506
       - pdfplumber==0.11.7
-      - peewee==3.18.2
       - pexpect==4.9.0
       - pillow==11.3.0
-      - pip==25.2
-      - platformdirs==4.3.8
       - portalocker==3.2.0
       - posthog==3.25.0
-      - prompt-toolkit==3.0.51
+      - prompt-toolkit==3.0.52
       - propcache==0.3.2
-      - protobuf==6.31.1
+      - protobuf==5.29.5
       - ptyprocess==0.7.0
       - pure-eval==0.2.3
-      - pyarrow==17.0.0
       - pyasn1==0.6.1
       - pyasn1-modules==0.4.2
-      - pybase64==1.4.1
-      - pycparser==2.22
-      - pydantic==2.11.7
+      - pybase64==1.4.2
+      - pycparser==2.23
+      - pydantic==2.11.9
       - pydantic-core==2.33.2
       - pydantic-settings==2.10.1
       - pygments==2.19.2
       - pyjwt==2.10.1
+      - pylance==0.36.0
       - pypdf==5.9.0
       - pypdfium2==4.30.0
       - pypika==0.48.9
       - pyproject-hooks==1.2.0
-      - pyright==1.1.403
+      - pyright==1.1.405
       - pysbd==0.3.4
       - python-dotenv==1.1.1
       - pytube==15.0.0
@@ -194,44 +234,44 @@ dependencies:
       - pyyaml==6.0.2
       - qdrant-client==1.15.1
       - referencing==0.36.2
-      - regex==2024.11.6
-      - requests==2.32.4
+      - regex==2025.9.18
+      - requests==2.32.5
       - requests-oauthlib==2.0.0
       - requests-toolbelt==1.0.0
       - rich==13.9.4
-      - rpds-py==0.26.0
+      - rpds-py==0.27.1
       - rsa==4.9.1
       - schema==0.7.7
       - shellingham==1.5.4
       - sniffio==1.3.1
-      - soupsieve==2.7
-      - sqlalchemy==2.0.42
+      - soupsieve==2.8
+      - sqlalchemy==2.0.43
       - stack-data==0.6.3
-      - starlette==0.47.2
+      - starlette==0.48.0
       - sympy==1.14.0
       - tabulate==0.9.0
       - tenacity==9.1.2
-      - tiktoken==0.9.0
+      - tiktoken==0.11.0
       - tokenizers==0.20.3
       - tomli==2.2.1
       - tomli-w==1.2.0
       - tqdm==4.67.1
       - traitlets==5.14.3
-      - typer==0.16.0
-      - types-requests==2.32.4.20250611
-      - typing-extensions==4.14.1
+      - typer==0.17.4
+      - types-requests==2.32.4.20250913
+      - typing-extensions==4.15.0
       - typing-inspect==0.9.0
       - typing-inspection==0.4.1
       - urllib3==2.5.0
-      - uv==0.8.3
+      - uv==0.8.18
       - uvicorn==0.35.0
       - uvloop==0.21.0
       - watchfiles==1.1.0
       - wcwidth==0.2.13
       - websocket-client==1.8.0
       - websockets==15.0.1
-      - wrapt==1.17.2
+      - wrapt==1.17.3
       - yarl==1.20.1
       - zipp==3.23.0
       - zstandard==0.23.0
-prefix: /opt/miniconda3/envs/project-2
+prefix: /opt/miniconda3/envs/test
